--- a/src/FTPSchubser/FTPSchubser/MainWindow.xaml
+++ b/src/FTPSchubser/FTPSchubser/MainWindow.xaml
@@ -5,8 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FTPSchubser"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="FTPSchubser" Height="150" Width="250" Topmost="True" ResizeMode="CanMinimize">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Content="dropzone" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="32" />
+        <Button x:Name="button" Content="Button" Grid.Column="0" Grid.Row="1"/>
+        <ProgressBar x:Name="progress" Grid.Column="1" Grid.Row="1"/>
     </Grid>
 </Window>
