--- a/src/FTPSchubser/FTPSchubser/MainWindow.xaml
+++ b/src/FTPSchubser/FTPSchubser/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FTPSchubser"
         mc:Ignorable="d"
-        Title="FTPSchubser" Height="150" Width="250" Topmost="True" ResizeMode="CanMinimize">
+        Title="FTPSchubser" Height="180" Width="280" Topmost="True" ResizeMode="CanMinimize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -25,7 +25,8 @@
             </Grid.ColumnDefinitions>
 
             <Button x:Name="btn_settings" Content="🛠" Grid.Column="0" Grid.Row="0" Margin="0,0,2,0" Padding="5,1"/>
-            <ProgressBar x:Name="progress" Grid.Column="1" Grid.Row="0" Margin="2,0,0,0"/>
+            <ProgressBar x:Name="progress_bar" Grid.Column="1" Grid.Row="0" Margin="2,0,0,0"/>
+            <Label x:Name="progress_label" Grid.Column="1" Grid.Row="0" Margin="2,0,0,0" Content="" HorizontalAlignment="Left" VerticalAlignment="Center" />
         </Grid>
     </Grid>
 </Window>
