--- a/src/FTPSchubser/SettingsWindow.xaml
+++ b/src/FTPSchubser/SettingsWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FTPSchubser"
         mc:Ignorable="d"
-        Title="Settings" ResizeMode="NoResize" ShowInTaskbar="False" SizeToContent="WidthAndHeight" Topmost="True" WindowStartupLocation="CenterOwner" Width="300" Height="500" WindowStyle="ToolWindow">
+        Title="Settings" ResizeMode="NoResize" ShowInTaskbar="False" SizeToContent="Height" Topmost="True" WindowStartupLocation="CenterOwner" Width="350" Height="500" WindowStyle="ToolWindow">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -50,30 +50,30 @@
             </Grid.RowDefinitions>
 
             <Label Grid.Row="0" Grid.Column="0" Content="Host" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
-            <TextBox Grid.Row="0" Grid.Column="1" x:Name="txtHost" MinWidth="200" VerticalContentAlignment="Center" />
+            <TextBox Grid.Row="0" Grid.Column="1" x:Name="txtHost"  VerticalContentAlignment="Center" TextChanged="updateServerUrlPathLabel" GotKeyboardFocus="SelectAllKeyboardFocus" />
 
             <Label Grid.Row="1" Grid.Column="0" Content="Port" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
-            <TextBox Grid.Row="1" Grid.Column="1" x:Name="txtPort" Width="25" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" HorizontalAlignment="Left" />
+            <TextBox Grid.Row="1" Grid.Column="1" x:Name="txtPort" Width="25" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" HorizontalAlignment="Left" PreviewTextInput="txtPort_PreviewTextInput" TextChanged="updateServerUrlPathLabel"  GotKeyboardFocus="SelectAllKeyboardFocus"/>
 
             <CheckBox Grid.Row="2" Grid.Column="1" x:Name="cbPassiveMode" Content="use passive mode" VerticalAlignment="Center" />
 
             <Label Grid.Row="3" Grid.Column="0" Content="User" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
-            <TextBox Grid.Row="3" Grid.Column="1" x:Name="txtUser" MinWidth="200" VerticalContentAlignment="Center" />
+            <TextBox Grid.Row="3" Grid.Column="1" x:Name="txtUser" VerticalContentAlignment="Center" GotKeyboardFocus="SelectAllKeyboardFocus" />
 
             <Label Grid.Row="4" Grid.Column="0" Content="Password" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
-            <PasswordBox Grid.Row="4" Grid.Column="1" x:Name="txtPassword" MinWidth="200" VerticalContentAlignment="Center" />
+            <PasswordBox Grid.Row="4" Grid.Column="1" x:Name="txtPassword" VerticalContentAlignment="Center" GotKeyboardFocus="SelectAllKeyboardFocus" />
 
             <Label Grid.Row="5" Grid.Column="0" Content="Server Path" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
-            <TextBox Grid.Row="5" Grid.Column="1" x:Name="txtServerPath" MinWidth="200" VerticalContentAlignment="Center" />
+            <TextBox Grid.Row="5" Grid.Column="1" x:Name="txtServerPath" VerticalContentAlignment="Center" TextChanged="updateServerUrlPathLabel" GotKeyboardFocus="SelectAllKeyboardFocus" />
 
             <Label Grid.Row="6" Grid.Column="0" Content=" " VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
-            <Label Grid.Row="6" Grid.Column="1" x:Name="lblServerPathPreview" VerticalContentAlignment="Center" HorizontalContentAlignment="Left"/>
+            <Label Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" x:Name="lblServerPathPreview" VerticalContentAlignment="Center" HorizontalContentAlignment="Left"/>
 
             <Label Grid.Row="7" Grid.Column="0" Content="URL Path" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
-            <TextBox Grid.Row="7" Grid.Column="1" x:Name="txtUrlPath" MinWidth="200" VerticalContentAlignment="Center" />
+            <TextBox Grid.Row="7" Grid.Column="1" x:Name="txtUrlPath" VerticalContentAlignment="Center" TextChanged="updateServerUrlPathLabel" GotKeyboardFocus="SelectAllKeyboardFocus" />
 
             <Label Grid.Row="8" Grid.Column="0" Content=" " VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
-            <Label Grid.Row="8" Grid.Column="1" x:Name="lblUrlPathPreview" VerticalContentAlignment="Center" HorizontalContentAlignment="Left"/>
+            <Label Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" x:Name="lblUrlPathPreview" VerticalContentAlignment="Center" HorizontalContentAlignment="Left"/>
 
             <Label Grid.Row="9" Grid.Column="0" Content="Other Options" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
 
