add drag/drop upload

--- a/src/FTPSchubser/MainWindow.xaml
+++ b/src/FTPSchubser/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FTPSchubser"
         mc:Ignorable="d"
-        Title="FTPSchubser" Height="180" Width="280" Topmost="True" ResizeMode="CanMinimize">
+        Title="FTPSchubser" Height="180" Width="280" Topmost="True" ResizeMode="CanMinimize" AllowDrop="True" Drop="Window_Drop">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -26,7 +26,7 @@
 
             <Button x:Name="btn_settings" Content="🛠" Grid.Column="0" Grid.Row="0" Margin="0,0,2,0" Padding="5,1" Click="btn_settings_Click"/>
             <ProgressBar x:Name="progress_bar" Grid.Column="1" Grid.Row="0" Margin="2,0,0,0"/>
-            <Label x:Name="progress_label" Grid.Column="1" Grid.Row="0" Margin="2,0,0,0" Content="" HorizontalAlignment="Left" VerticalAlignment="Center" />
+            <Label x:Name="progress_label" Grid.Column="1" Grid.Row="0" Margin="2,0,0,0" Content=" " HorizontalAlignment="Left" VerticalAlignment="Center" />
         </Grid>
     </Grid>
 </Window>
