--- a/src/FTPSchubser/MainWindow.xaml
+++ b/src/FTPSchubser/MainWindow.xaml
@@ -25,8 +25,8 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
-            <Button x:Name="btn_settings" Content="🛠" Grid.Column="0" Padding="5,1" Click="btn_settings_Click"/>
-            <Button x:Name="btn_fileList" Content="📂" Grid.Column="1" Margin="2,0,0,0" Padding="5,1" Click="btn_fileList_Click"/>
+            <Button x:Name="btn_fileList" Content="📂" Grid.Column="0" Padding="5,1" Click="btn_fileList_Click"/>
+            <Button x:Name="btn_settings" Content="🛠" Grid.Column="1" Margin="2,0,0,0" Padding="5,1" Click="btn_settings_Click"/>
             <ProgressBar x:Name="progress_bar" Grid.Column="2" Margin="2,0,0,0"/>
             <Label x:Name="progress_label" Grid.Column="2" Margin="2,0,0,0" Content=" " HorizontalAlignment="Left" VerticalAlignment="Center" />
         </Grid>
